--- a/routes/common/email_templates/basic.ejs
+++ b/routes/common/email_templates/basic.ejs
@@ -109,7 +109,7 @@
                     <tr>
                         <td align="center" valign="top" style="padding: 40px 10px 40px 10px;">
                             <a href="https://www.shippigo.com/" target="_blank">
-                                <img src="https://www.shippigo.com/img/shippigo-logo.png" style="display: block; width: 200px; max-width: 200px; min-width: 200px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px; padding: 10px 17px 10px 15px; border-radius: 30px; background-color: #ffffff;"
+                                <img src="https://4.imimg.com/data4/IR/UQ/IMOB-39456304/10-8x12-500x500.jpg" style="display: block; width: 200px; max-width: 200px; min-width: 200px; font-family: 'Lato', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px; padding: 10px 17px 10px 15px; border-radius: 30px; background-color: #ffffff;"
                                     border="0" />
                             </a>
                         </td>
